[gd_scene load_steps=2 format=2]

[ext_resource path="res://test/GuardarCargaTest.gd" type="Script" id=1]

[node name="GuardarCargaTest" type="Node"]
script = ExtResource( 1 )

[node name="BotonGuardado" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 11.0
margin_top = 112.0
margin_right = 124.0
margin_bottom = 156.0
text = "Guardar"

[node name="BotonCargar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 111.0
margin_right = -8.0
margin_bottom = 156.0
text = "Cargar"

[node name="Label" type="Label" parent="."]
margin_left = 390.0
margin_top = 219.0
margin_right = 566.0
margin_bottom = 233.0
text = "Hola mundo, mi nombre es"

[node name="TextoResultadoJASON" type="Label" parent="."]
margin_left = 615.0
margin_top = 277.0
margin_right = 655.0
margin_bottom = 291.0
text = "Resultado"

[node name="TesxtoResultadoTRES" type="Label" parent="."]
margin_left = 609.0
margin_top = 341.0
margin_right = 694.0
margin_bottom = 362.0
text = "Resultado"

[node name="NombreJSON" type="LineEdit" parent="."]
margin_left = 364.0
margin_top = 257.0
margin_right = 601.0
margin_bottom = 309.0

[node name="NombreTRES" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = 6.0
margin_right = 122.0
margin_bottom = 56.0

[node name="BotonGuardadoGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 185.0
margin_right = 137.0
margin_bottom = 229.0
text = "Guardar a lo Godot"

[node name="BotonCargarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 185.0
margin_right = -7.0
margin_bottom = 230.0
text = "Cargar a lo Godot"

[node name="BotonBorrar" type="Button" parent="."]
margin_left = 263.0
margin_top = 328.0
margin_right = 348.0
margin_bottom = 374.0
text = "Borrar"

[connection signal="pressed" from="BotonGuardado" to="." method="_on_BotonGuardado_pressed"]
[connection signal="pressed" from="BotonCargar" to="." method="_on_BotonCargar_pressed"]
[connection signal="pressed" from="BotonGuardadoGodot" to="." method="_on_BotonGuardadoGodot_pressed"]
[connection signal="pressed" from="BotonCargarGodot" to="." method="_on_BotonCargarGodot_pressed"]
[connection signal="pressed" from="BotonBorrar" to="." method="_on_BotonBorrar_pressed"]
